Fix code block overflow issue

--- a/static/css/adtl-syntax.css
+++ b/static/css/adtl-syntax.css
@@ -6,3 +6,9 @@
 .highlight>.chroma .lntd:last-child {
     width: 100%;
 }
+
+.highlight {
+    max-height: 50vh;
+    overflow-x: scroll;
+    overflow-y: scroll;
+}
